fix swag cant call get with header body
